<resources xmlns:https="http://schemas.android.com/apk/res-auto">
    <string name="layersmanager">Layers Manager</string>
    <string name="PlaystoreSearch"><![CDATA[
        https://play.google.com/store/search?q=Layers+Theme&c=apps&docType=1&sp=CAFiDgoMTGF5ZXJzIFRoZW1legIYAIoBAggB:S:ANO1ljK_ZAY
        ]]></string>
    <string name="tooBad">Too bad.</string>
    <string name="noPlugins">You don\'t have installed any compatible plugins yet, Use the FAB button for none plugin type overlays.</string>
    <string name="ShowCaseMore">Find some new beautiful overlays. Beta available now!</string>
    <string name="PlayStoreMore">Have a look on the PlayStore.</string>
    <string name="donotshowagain">Do not show again</string>
    <string name="installeverything">Install everything</string>
    <string name="selectalloverlays">Select all Overlays</string>
    <string name="WhatsNew">WHATS NEW</string>
    <string name="Category2Name">Style Specific Overlays</string>
    <string name="Category1Name">General Overlays</string>
    <string name="noRoot">No root access available</string>
    <string name="niklasschnettler">Niklas Schnettler</string>
    <string name="developedby">Layers developed by</string>
    <string name="usefullinks">Useful links</string>
    <string name="version">Version</string>
    <string name="AditionalLayersDev">Additional Layers commits</string>
    <string name="findOutWhatsNew">Find out whats new</string>
    <string name="joinTheChat">Join the chat</string>
    <string name="AppDeveloper">App Developer</string>
    <string name="LayersDeveloper">Layers Developer</string>
    <string name="LayersLeadDeveloper">Layers Lead Developer</string>
    <string name="ShowcaseDeveloper">Showcase Developer</string>
    <string name="OpenSourceLicenses">Open Source Licenses:</string>
    <string name="License1">Root Tools</string>
    <string name="License1about" translatable="false">Stephen Erickson, Chris Ravenscroft, Dominik Schuermann, Adam Shanks</string>
    <string name="License1github" translatable="false">https://github.com/Stericson/RootTools</string>
    <string name="License2">Introduction</string>
    <string name="License2about" translatable="false">Ruben Gees</string>
    <string name="License2github">https://github.com/rubengees/introduction</string>
    <string name="License3">Material CAB</string>
    <string name="License3about" translatable="false">Aidan Michael Follestad</string>
    <string name="License3github">https://github.com/afollestad/material-cab</string>
    <string name="License4">CircleImageView</string>
    <string name="License4about" translatable="false">Henning Dodenhof</string>
    <string name="License4github">https://github.com/hdodenhof/CircleImageView</string>
    <string name="MIT1">The MIT License (MIT)\n\nCopyright (c)</string>
    <string name="MIT2">\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\n THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="Apache1">Copyright ©</string>
    <string name="Apache2">\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="linkXda">http://forum.xda-developers.com/android/apps-games/official-layers-bitsyko-apps-rro-t3012172</string>
    <string name="linkCommunity">https://plus.google.com/u/0/communities/102261717366580091389</string>
    <string name="linkNiklas">https://plus.google.com/u/0/+NiklasSchnettler/posts</string>
    <string name="linkSteve">https://plus.google.com/u/0/+SteveLovejoy/posts</string>
    <string name="linkAldrin">https://plus.google.com/u/0/+AldrinHolmes20/posts</string>
    <string name="linkBrian">https://plus.google.com/u/0/+BrianGill55/posts</string>
    <string name="linkReinhard">https://plus.google.com/101549242713977412381/posts</string>
    <string name="linkSyko">https://plus.google.com/u/0/+SykoPompos/posts</string>
    <string name="linkBranden">https://plus.google.com/u/0/101729058057775926785/posts</string>
    <string name="linkDenis">https://plus.google.com/u/0/+DenisSuarez98/posts</string>
    <string name="linkAndrzej">https://plus.google.com/117376207394302665227/posts</string>
    <string name="Slide1_Heading">Layers Manager</string>
    <string name="Slide1_Text">The central place to manage all your Overlays.</string>
    <string name="Slide2_Heading">Plugin Overlays</string>
    <string name="Slide2_Text">Compatible themes are directly integrated into the Layers Manager. Open them from the main page and directly install your favorite Overlays.</string>
    <string name="Slide3_Heading">APK / ZIP Overlays</string>
    <string name="Slide3_Text">Install themes available as apk´s or zip´s by clicking on the Floating Action Button.</string>
    <string name="Slide4_Heading">Uninstall Overlays</string>
    <string name="Slide4_Text">Uninstall the Overlays you do not want to use anymore.</string>
    <string name="Slide5_Heading">Backup &amp; Restore</string>
    <string name="Slide5_Text">Backup your favorite Overlays to restore them later.</string>
    <string name="Slide6_Heading">Hide Launcher Icon?</string>
    <string name="Slide7_Heading">Hide unnecessary Overlays?</string>
    <string name="instructionstitle">Tutorial</string>
    <string name="instructionscard1header">Install plugin overlays</string>
    <string name="instructionscard1">Click one of the installed overlays\nChoose the apps you want to theme\nClick the FAB to install the overlays</string>
    <string name="instructionscard2header">Install normal overlays</string>
    <string name="instructionscard2">Click the FAB on the main screen\nChoose either a .zip or multiple .apk\'s\nClick the FAB to install the selected overlays</string>
    <string name="instructionscard3header">Uninstall overlays</string>
    <string name="instructionscard3">From the nav-drawer select "uninstall overlays"\nSelect multiple overlays\nClick the FAB to uninstall the selected overlays</string>
    <string name="instructionscard4header">Backup overlays</string>
    <string name="instructionscard4">From the nav-drawer select "Backup overlays"\nEnter a name and click "OK"</string>
    <string name="instructionscard5header">Restore overlays</string>
    <string name="instructionscard5">From the nav-drawer select "Restore overlays"\nClick the FAB to Restore the selected backup file</string>
    <string name="instructionscard6header">Replay Introduction</string>
    <string name="instructionscard6">Click to start tutorial from the beginning</string>
    <string name="InstallOverlays2">Install Overlays</string>
    <string name="installed">Installed selected Overlays</string>
    <string name="installing">Installing</string>
    <string name="installationFailure">\"%1$s\": Installation aborted!</string>
    <string name="tooManyFrameworksAbort">CAUTION! You tried to install more than 4 framework overlays! Their installation was stopped to prevent a bootloop!</string>
    <string name="tooManyFrameworksNotify">CAUTION! You installed MORE THAN 4 framework overlays! Please remove some of them to prevent a bootloop!</string>
    <string name="UninstallOverlays">Uninstall Overlays</string>
    <string name="selectAll">Select all</string>
    <string name="nothingApplied">No Overlays applied.\nInstall some on the main page.</string>
    <string name="appliedOverlays">Applied Overlays:</string>
    <string name="OverlaysSelected">Overlays selected</string>
    <string name="PreformReboot">Perform a soft reboot?</string>
    <string name="uninstalled">Uninstalled selected Overlays</string>
    <string name="uninstallingOverlays">Uninstalling Overlays</string>
    <string name="noBackups">No Backups available.\nMake one by clicking the FAB.</string>
    <string name="Backups">Backups:</string>
    <string name="BackupRestore">Backup &amp; Restore</string>
    <string name="backupInstalledOverlays">Backup installed Overlays</string>
    <string name="enterBackupName">Enter a backup name</string>
    <string name="noInputName">Please enter a name</string>
    <string name="nothingToBackup">Nothing available to backup</string>
    <string name="DoYouWantToRestore">Do you want to restore or delete the selected Backup?</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="DeleteBackup">Deleting Backup</string>
    <string name="deleting">Deleting</string>
    <string name="BackupOverlays">Backup Overlays</string>
    <string name="backingUp">Backing up</string>
    <string name="backupComplete">Backup complete</string>
    <string name="Restore">Restore Overlays</string>
    <string name="restoring">Restoring</string>
    <string name="deletedBackup">Deleted selected Backup</string>
    <string name="restored">Restored selected Backup</string>
    <string name="More">More</string>
    <string name="Tutorial">Tutorial</string>
    <string name="About">About</string>
    <string name="Showcase">Layers Showcase</string>
    <string name="discover">Discover</string>
    <string name="PlayStore">PlayStore</string>
    <string name="Settings">Settings</string>
    <string name="General">General</string>
    <string name="SettingLauncherIconDetail">Remove Launcher icon</string>
    <string name="LauncherIconSummaryEnabled">Your ROM supports the Settings dashboard Layers shortcut</string>
    <string name="LauncherIconSummaryDisabled">Your ROM doesn\'t support this option</string>
    <string name="launcherIconRemoved">Launcher icon is removed</string>
    <string name="launcherIconRevived">Launcher icon is back</string>
    <string name="SettingsHideOverlays">Hide unnecessary Overlays</string>
    <string name="SettingsHideOverlaysDetail">Disable Overlays for not installed Apps</string>
    <string name="SettingsFrameworkBootloopTitle">Prevent bootloops</string>
    <string name="SettingsFrameworkBootloopDetail">Installation of more than 4 framework overlays is prohibited. Disabling this option can result in a bootloop</string>
    <string name="MoveOverlays">Install Overlays?</string>
    <string name="VisitGithub">Github</string>
    <string name="Reboot">Reboot</string>
    <string name="pick_color">Pick a Style</string>
    <string name="ApplyOverlays">Apply selected Overlays?</string>
    <string name="OverlaysInstalled">Overlays installed!</string>
    <string name="emptydirectory">This directory seems to be empty.</string>
    <string name="Sort">Sort by</string>
    <string name="sort_name">Name</string>
    <string name="sort_developer">Developer</string>
    <string name="sort_random">Random</string>
</resources>