<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Toolbar.Popup.AppCompat"
        app:theme="@style/Toolbar.AppCompat.Responsive"
        android:elevation="@dimen/toolbarElevation"/>



    <ScrollView
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar5"
        android:background="@color/background_material_light"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                card_view:elevation="@dimen/cardElevation"
                card_view:cardBackgroundColor="@color/card_background">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="@dimen/cardElevation"
                        android:text="@string/instructionscard1header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="@dimen/cardElevation"
                        android:text="@string/instructionscard1"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                card_view:elevation="5dp"
                card_view:cardBackgroundColor="@color/card_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="@dimen/cardElevation"
                        android:text="@string/instructionscard2header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textview7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginEnd="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="@dimen/cardElevation"
                        android:text="@string/instructionscard2"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                card_view:elevation="5dp"
                card_view:cardBackgroundColor="@color/card_background">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="5dp"
                        android:text="@string/instructionscard3header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textview9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginEnd="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="5dp"
                        android:text="@string/instructionscard3"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                card_view:elevation="5dp"
                card_view:cardBackgroundColor="@color/card_background">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="5dp"
                        android:text="@string/instructionscard4header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textview11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginEnd="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="5dp"
                        android:text="@string/instructionscard4"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                card_view:elevation="5dp"
                card_view:cardBackgroundColor="@color/card_background">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="5dp"
                        android:text="@string/instructionscard5header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textview13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="5dp"
                        android:text="@string/instructionscard5"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/CardView_Instructions6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_marginTop="@dimen/mediumMargin"
                android:layout_marginBottom="@dimen/mediumMargin"
                card_view:elevation="5dp"
                card_view:cardBackgroundColor="@color/card_background">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5.59"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="@dimen/mediumMargin"
                        android:elevation="5dp"
                        android:text="@string/instructionscard6header"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/textview15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginBottom="@dimen/mediumMargin"
                        android:layout_marginStart="@dimen/mediumMargin"
                        android:layout_marginTop="12dp"
                        android:elevation="5dp"
                        android:text="@string/instructionscard6"
                        android:textColor="@color/text_color_secondary"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>